# nin-qgis-plugin

./: .Rhistory  .flake8  .gitattributes  .gitignore  404.html  LICENSE  README.md  README_for_developers.md  chapter_4_export.Rmd  create_gpkg.py  create_gpkg_project.bat  create_project.py  egenskaper_fugleobs.csv  eksportere-prosjekt.html  environment.yaml  feltutstyr.html  fremgangsmåte.txt  index.html  introduksjon.html  kartlegging.html  kode_vind.csv  kvalitetssikring.html  nin_api_version_info.txt  oppsett-og-tilrettelegging.html  publish_book.R  pyproject.toml  reference-keys.txt  search_index.json
nin-qgis-handling/: attribute_meta.json  config.toml
nin_qgis_plugin/: Makefile  README.html  README.md  README.txt  README_english.md  __init__.py  bird_attributes_test.csv  create_gpkg.py  create_qgis_project_file.py  hovedtyper_attribute_table.csv  hovedtyper_meta.csv  hovedtypgrupper_attribute_table.csv  hovedtypgrupper_meta.csv  metadata.txt  nin_form.ui  nin_form_handling.py  nin_polygons_meta.csv  nin_qgis_plugin.py  nin_qgis_plugin_dialog.py  nin_qgis_plugin_dialog_base.ui  nin_qgis_plugin_dockwidget.py  nin_qgis_plugin_dockwidget_base.ui  nin_survey.gpkg  pb_tool.cfg  plugin_upload.py  polygon_draw_tool.py  project_setup.py  resources.py  resources.qrc  test_configure_fields_range_widget.py  typer_attribute_table.csv  typer_meta.csv
repository-documentation/: repository_documentation.Rmd  repository_documentation_english.Rmd
tests_csv/: test_csv_tables.py
user-guide/: .Rhistory  .gitignore  _bookdown.yml  advanced_guide.html  advanced_guide.md  index.Rmd  (+16 more)
(+54 files in other folders)
