[tool.poetry]
name = "nin-qgis-handling"
version = "0.1.0"
description = "Handles the creation and deployment of the NiN QGIS plugin."
authors = ["Lasse Keetz <lassekee@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
pb-tool = "^3.1.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
